# autobots-devtools-shared-lib

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  Makefile  PUBLISHING.md  README-v2.md  README.md  chainlit.md  docker-compose.yml  main.py  node-red-config.yaml  pyproject.toml
.chainlit/: config.toml
.github/workflows/: ci.yml  publish.yml
configs/bro/: agents.yaml  dynadoc.yaml
configs/bro/prompts/: coordinator.md  entity_agent.md  features_agent.md  getting_started_agent.md  preface_agent.md
configs/bro/schemas/: 02-getting-started.json
configs/chat/: agents.yaml
configs/common/schemas/: logical_processing.json
configs/dynagent/: context.yaml
configs/mcp-example/: agents.yaml
configs/mcp-example/prompts/: designer.md
configs/sample_domain/: agents.yaml
configs/sample_domain/directives/: logical_processing_directives.json  scenario_directives.json  test_data_directives.json
configs/sample_domain/prompts/: logical_agent.md
configs/sample_domain/schemas/: logical_processing.json  scenario.json  test_data.json
configs/vision-agent/: agents.yaml  sections.yaml
docs/: Golden_Prompt_Guidelines.md  JSON_Excel_Converter_Usage_Guide.md  changes.md  golden-prompt.md  session_vs_thread.md  todo-list.md  todo.md
docs/adr/: 0001-isolated-history-mode.md  0002-kg-semantic-search-pgvector.md
docs/design/: 2026-03-24-workspace-status-design.md  2026-03-25-workspace-status-plan.md  2026-03-27-mcp-integration-design.md  2026-04-24-review-framework-prd.md  2026-04-29-kg-retrieval-design.md  Generic Agent Logical.drawio  README.md  architecture-high-level.md  context-key-resolver.md  data-flow-invocation.md  document-lifecycle.md  initialization-order.md  module-dependencies.md  prd-platform-analytics.md  w3c-traceparent-propagation.md
docs/design/kg/: load.py  requirements.txt
docs/experiment/prompt-eval/: MER-Prompt-Eval-Architecture.excalidraw  mer-prompt-evaluation-architecture.md  prompt-eval-architecture.md  prompt-evaluation-agentic-ai.md
docs/features/: reduce-agent-boilerplate.md  w3c-traceparent-propagation.md
docs/living-docs/: toc.md
docs/plans/: reduce-agent-boilerplate.md
docs/specs/: bro-agent-spec.md
docs/superpowers/: designer-canvas-prd.md
docs/superpowers/plans/: 2026-03-27-mcp-integration.md  2026-04-24-review-framework.md  2026-06-22-react-copilotkit-ui-integration.md  2026-06-24-copilotkit-v2-backend-alignment.md  2026-06-24-copilotkit-v2-runtime-skeleton.md  2026-07-05-ama-ui-backend.md  2026-07-06-fserver-backend-lazy-context.md  2026-07-17-isolated-history-mode.md  2026-07-18-isolated-history-middleware.md  2026-07-23-pgvector-semantic-search.md
docs/superpowers/specs/: 2026-05-30-gpa-skills-design.md  2026-06-22-react-copilotkit-ui-integration-design.md  2026-06-24-copilotkit-v2-alignment-design.md  2026-07-05-ama-ui-backend-design.md  2026-07-06-fserver-backend-lazy-context-design.md  2026-07-18-isolated-history-middleware-design.md  2026-07-22-pgvector-semantic-search-design.md
local_file_server/: README.md  __init__.py  app.py  requirements-file-server.txt
prompts/designer/: joke_agent.md  math_agent.md
prompts/vision-agent/: 01-preface.md  02-getting-started.md  03-01-list-of-features.md  05-entity.md  coordinator.md
sbin/: run_bro.sh
schemas/vision-agent/: 01-preface.json  02-getting-started.json  03-01-list-of-features.json  05-entity.json  meta.json
src/autobots_devtools_shared_lib/: __init__.py
src/autobots_devtools_shared_lib/common/: __init__.py
src/autobots_devtools_shared_lib/converter/: xlsheets.py
src/autobots_devtools_shared_lib/dynadoc/: __init__.py  engine.py  errors.py  manifest.py  tool.py
src/autobots_devtools_shared_lib/dynagent/: __init__.py  workspace.py
src/autobots_devtools_shared_lib/eval/: __init__.py
src/bro_chat/: __init__.py  app.py  ui.py  usecase_ui.py
src/bro_chat/agents/: __init__.py  bro.py  bro_tools.py  crew.py  dynagent.py  tools.py
src/bro_chat/config/: __init__.py  section_config.py  settings.py
src/bro_chat/models/: __init__.py  document.py  outputs.py  schema_loader.py  status.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_batch_flow.py  test_bro_batch_flow.py  test_bro_flow.py  test_bro_structured.py  test_chat_flow.py  test_dynagent_flow.py  test_ui_e2e.py
tests/integration/: __init__.py  conftest.py  test_base_agent.py  test_batch.py  test_bro_agent.py  test_bro_batch.py  test_bro_tools.py  test_bro_with_conversion.py  test_crew.py  test_deepagent_skills_sanity.py  test_fserver_client_local.py  test_inject_agent.py  test_invocation_utils.py  test_otel_fastapi_capture.py  test_structured_converter_real.py  test_structured_dynagent.py  test_ui_smoke.py
tests/manual/: print_resolved_schemas.py
tests/unit/: __init__.py  test_activity_projection.py  test_agent_config_utils.py  test_agent_meta.py  test_agent_meta_deep_maps.py  test_agui_app.py  test_agui_endpoint.py  test_base_agent.py  test_base_agent_factory.py  test_base_agent_params.py  test_base_deepagent.py  test_batch.py  test_bro_batch.py  test_bro_tools.py  test_cache_backed_context_store.py  test_chainlit_step_renderer.py  test_collapse_system_messages.py  test_config_filename.py  test_context_key_and_provider.py  test_copilotkit_server.py  test_deep_backend.py  test_deep_config_keys.py  test_deep_mcp.py  test_deep_rubric.py  test_deep_state.py  test_deep_subagents.py  test_deepagents_available.py  test_document_models.py  test_document_store.py  test_dynagent_settings.py  test_dynagent_state.py  test_dynagent_state_mcp_auth.py  test_env_interpolation.py  test_fileserver_git.py  test_format_tools.py  test_formatting.py  test_fserver_backend.py  test_invocation_utils.py  test_llm_overrides.py  test_logging_session_id.py  (+28 more)
ui/: .env.example  Atlas Backend Spec.html  Atlas Chat.html  Atlas × CopilotKit.html  README.md  app.jsx  ck-app.jsx  ck-components.jsx  ck-runtime.jsx  copilotkit.css  package-lock.json  package.json  styles.css  tsconfig.json  ui.jsx
ui/app/: layout.tsx  page.tsx
(+396 files in other folders)
